--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,35 +1,54 @@
 name: CI Workflow
 
-# Triggers the workflow on push or pull request to main or master branch
 on:
   push:
     branches: [main, master]
   pull_request:
     branches: [main, master]
 
-# Specify the job(s) for this workflow
 jobs:
   build:
-    # The type of runner to use for the job
     runs-on: ubuntu-latest
 
-    # Steps for the job
+    services:
+      db:
+        image: postgres:13
+        env:
+          POSTGRES_DB: ServerAppDB
+          POSTGRES_USER: myuser
+          POSTGRES_PASSWORD: mypassword
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd "pg_isready -U myuser"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
-      # Step 1: Check out the repository
-      - name: Check out code
+      - name: Check out the code
         uses: actions/checkout@v3
 
-      # Step 2: Set up Java
-      - name: Set up Java 17
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: "adopt"
+          distribution: "temurin"
           java-version: "17"
 
-      # Step 3: Build the project with Maven
+      - name: Cache Maven dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
       - name: Build with Maven
         run: ./mvnw clean install
 
-      # Step 4: Run tests
       - name: Run tests
-        run: ./mvnw test
+        env:
+          SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/ServerAppDB
+          SPRING_DATASOURCE_USERNAME: myuser
+          SPRING_DATASOURCE_PASSWORD: mypassword
+        run: ./mvnw test -Dspring.profiles.active=test
