--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
+server.port=8080 
+server.address=0.0.0.0
 spring.datasource.url=jdbc:postgresql://localhost:5432/ServerAppDB
 spring.datasource.username=myuser
 spring.datasource.password=mypassword
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-server.port=8081
+
+
